[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["yuri620620@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.2"
requests = "^2.28.2"
flask = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
